# cu-study-groups

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  vercel.json
.github/workflows/: supabase.yml  test.yml
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmModal.css  ConfirmModal.test.tsx  ConfirmModal.tsx  CreateStudyGroupForm.css  CreateStudyGroupForm.tsx  EditStudyGroupForm.tsx  EmptyState.css  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorMessage.css  ErrorMessage.test.tsx  ErrorMessage.tsx  GroupParticipants.css  GroupParticipants.test.tsx  GroupParticipants.tsx  Header.css  Header.test.tsx  Header.tsx  JoinModal.css  JoinModal.test.tsx  JoinModal.tsx  LoadingSpinner.css  LoadingSpinner.test.tsx  LoadingSpinner.tsx  LoginForm.css  LoginForm.test.tsx  LoginForm.tsx  OrganizerDashboard.css  (+10 more)
google-apps-script/: README.md  webhook.gs
supabase/: config.toml
supabase/migrations/: 20260117000001_initial_schema.sql  20260117000002_rls_policies.sql  20260117000003_functions_triggers.sql  20260117000004_organizer_auth.sql  20260117000005_cleanup_cron.sql  20260117000006_restrict_email_domains.sql  20260117000007_participant_visibility.sql  20260125000001_allow_authenticated_create_groups.sql  20260125000002_add_description_field.sql
tests/: __init__.py  conftest.py  test_cleanup.py  test_email_functions.py  test_organizer_auth.py  test_schema.py
(+26 files in other folders)
